Update login button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,18 @@
             android:exported="true"
             tools:ignore="Instantiatable">
         </activity>
+        <activity android:name=".BucketListActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+        <activity android:name=".LoginActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+        <activity android:name=".SignUpActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
     </application>
 
 </manifest>
